--- a/html/char.html
+++ b/html/char.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Crafty+Girls|Londrina+Shadow|Miltonian" rel="stylesheet">
     <link rel="stylesheet" href="../css/char.css">
-    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body>
     <header>
